[package]
name = "core"
version = "0.1.0"
edition = "2024"

[package]
name = "bip300-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Core BIP300 sidechain implementation library"
license = "MIT"

[dependencies]
# Bitcoin libraries
bitcoin = "0.30.0"
bitcoincore-rpc = "0.16.0"

# Storage
rocksdb = "0.20.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10.0"

[dev-dependencies]
tempfile = "3.3.0"
proptest = "1.2.0"

